<resources>
    <string name="app_name">BoolkaFifteen</string>
    <string name="game_title">Boolka\'s 15 Puzzle!</string>
    <string name="shuffle_button">Shuffle / New Game</string>
    <string name="win_message">Woof!</string>
    <string name="moves_initial_text">Moves: 0</string>
    <string name="moves_format">Moves: %d</string>
    <string name="timer_initial_text">Time: 00:00</string>
    <string name="timer_format">Time: %1$02d:%2$02d</string>

    <string name="display_mode_numbers">View: Numbers</string>
    <string name="display_mode_image">View: Image</string>
    <string name="display_mode_both">View: Both</string>

    <string name="difficulty_easy">Mode: Easy</string>
    <string name="difficulty_medium">Mode: Medium</string>
    <string name="difficulty_hard">Mode: Hard</string>
    <string name="load_custom_image">Load Custom Image</string>
</resources>
